Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.7:
	Alien hatchery:
	* No changes

	MSN:
	* Fix a crash when removing a user before its icon is loaded. (Mark
	  Barfield) (#15217)

	Yahoo!:
	* Fix a double-free in profile/picture loading code. (Mihai Serban)
	  (#15053)

version 2.10.6 (07/06/2012):
	Pidgin:
	* Fix a bug that requires a triple-click to open a conversation
	  window from the buddy list. (#15199)

version 2.10.5 (07/05/2012):
	libpurple:
	* Add support for GNOME3 proxy settings. (Mihai Serban) (#15054)

	Pidgin:
	* Fix a crash that may occur when trying to ignore a user who is
	  not in the current chat room. (#15139)

	MSN:
	* Fix building with MSVC on Windows (broken in 2.10.4). (Florian
	  Quèze)

	MXit:
	* Fix a buffer overflow vulnerability when parsing incoming messages
	  containing inline images.  Thanks to Ulf Härnhammar for reporting
	  this! (CVE-2012-3374)

version 2.10.4 (05/06/2012):
	General:
	* Support building against Farstream in addition to Farsight.
	  (Olivier Crete) (#14936)

	IRC:
	* Disable periodic WHO timer.  IRC channel user lists will no
	  longer automatically display away status, but libpurple will be
	  much kinder to the network.
	* Print unknown numerics to channel windows if we can associate
	  them.  Thanks to Marien Zwart. (#15090)

	MSN:
	* Fix a possible crash when receiving messages with certain characters
	  or character encodings.  Thanks to Fabian Yamaguchi for reporting
	  this! (CVE-2012-2318)

	XMPP:
	* Fix a possible crash when receiving a series of specially crafted
	  file transfer requests.  Thanks to José Valentín Gutiérrez for
	  reporting this!  (CVE-2012-2214)

	Windows-Specific Changes:
	* Words added to spell check dictionaries are saved across restarts of
	  Pidgin (#11886)

version 2.10.3 (03/26/2012):
	MSN:
	* Fix buddies not going offline. (#14997)

version 2.10.2 (03/14/2012):
	General: